Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/UndefinedConstructor.ru
/? DescripciÃ³n: caso de prueba que verifica que se haya declarado un constructor
/? Salida esperada:
/? ERROR: SEMÃNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 8 | COLUMNA 6 | CONSTRUCTOR NO DECLARADO

impl A{
fn m2() -> void{}}

struct A{}

start{}